{
  "da": "Danish",
  "de": "German",
  "en": "English",
  "es": "Spanish",
  "fr": "French",
  "he": "Hebrew",
  "hu": "Hungarian",
  "pl": "Polish",
  "pt": "Portuguese",
  "pt-br": "Portuguese - Brazil",
  "ro": "Romanian",
  "sr": "Serbian",
...
