...
          accessibilityLabel="share question"
          iconColor={iconColor}
        />
      ) : null}
      <BarButton
        icon="chevron-forward"
        label="Next"
        onPress={onNext}
        accessibilityLabel="next question"
        iconColor={iconColor}
      />
    </View>
  )
...
